<?xml version="1.0"?>
<package format="2">
  <name>packagebuddy</name>
  <version>1.0.0</version>
  <description>ROS package for Package Buddy</description>
  <maintainer email="mva271@nyu.edu">Matthew Avallone</maintainer>
  <url type="website">https://github.com/mattavallone/packagebuddy</url>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>vision_msgs</depend>
  
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
